# CLI_RESTART

./: .coveragerc  .env  .env.example  .env.template  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .merge-automation.yaml  .merge-policy.yaml  .pipeline_state.json  .pre-commit-config.yaml  .spectral.yaml  .trivyignore  .vscode  .vulture_whitelist.py  2025-10-19-caveat-the-messages-below-were-generated-by-the-u.txt  AGENTS.md  Agent_llm_Install.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY_2025-10-18.md  CLI_PY_GUI_TECHNICAL_SPEC.md  COMMIT_MSG.txt  COMPREHENSIVE_STATUS_REPORT.md  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  DUPLICATE_CLEANUP_REPORT.md  ENVIRONMENT_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PR_140_SUMMARY.md  PR_BODY.md  PR_CONTEXT.md  PR_CREATION_CONTEXT.md  PR_CREATION_QUICKSTART.md  PR_CREATION_STATUS.md  PR_PAYLOAD.json  PR_TASK_SUMMARY.md  (+39 more)
.ai-automation/: INTEGRATION_GUIDE.md  README.md
.code-intel/: README-INTEL.md  build_index.py  config.json  ignore_globs.txt  retrieve.py  watch_and_incremental.ps1
.gemini/: .gitignore  CONFIGURATION_SUMMARY.md  GEMINI.md  GITHUB_INTEGRATION.md  README.md  config.toml  settings.json  settings.json.template  settings.local.json.example  user_preferences.json
.githooks/: commit-msg
.github/: CODEOWNERS  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.launcher/: Run-Tool.ps1  health-monitor.ps1
.quarantine/: CLEANUP_REPORT.md
.runs/: README.md
CLI_RESTART/: __init__.py
WORKFLOW_VIS_FOLDER_1/: EXECUTION-COMPLETE-SUMMARY.md  FINAL_WORKSTREAMS_BATCH.txt  GENERATE_REMAINING_WORKSTREAMS.md  REMAINING_WORKSTREAMS_SUMMARY.md  WORKSTREAM_SUMMARY.md  master-workstream-executor.py  worker_apply_json.ps1  ws-01-schema-runtime-enforcement.json  ws-02-security-secrets-foundation.json  ws-03-core-testing-infrastructure.json  ws-04-documentation-code-quality.json  ws-05-schema-cicd-integration.json  ws-06-cli-core-operations.json  ws-07-workflow-templates-composition.json  ws-08-determinism-core.json  ws-09-observability-core.json  ws-10-resilience-circuit-breakers.json  ws-11-self-healing-implementation.json  ws-12-parallel-orchestration-foundation.json  ws-13-parallel-orchestration-advanced.json  ws-14-workflow-rollback-safety.json  ws-15-git-integration-bidirectional.json  ws-16-observability-advanced.json  ws-17-contract-e2e-testing.json  ws-18-configuration-architecture.json  ws-19-database-health-operations.json  ws-20-api-gui-foundation.json  ws-21-advanced-testing-quality.json  ws-22-workflow-scheduling.json  ws-23-vscode-extension-gui.json
alembic/: env.py
cli_multi_rapid_DEV/: .gitattributes  .gitconfig.local  GEMINI.md  My VS Code–centric approac.md  README.md  Unified Atomic Workflow.md  backup_branches_20250929_085712.txt  codebase_modification_phase.json  codex_pipeline_implementation_spec.json  comprehensive_workflow.md  integrated_workflow.md  new 9.md  repo_flow  simplified_workflow_system.md  unified-workflow-commands.md
config/: README.md  audit_retention_policy.json  base.yaml  cost_registry.yaml  dev.yaml  discovered_tools.yaml  docker-compose.yml  failover_maps.yaml  jwt_private.pem.template  jwt_public.pem.template  logging_config.json  metrics_config.json  pipeline.yaml  prod.yaml  quality_gates.yaml  secrets.schema.json  staging.yaml  state_retention_policy.json  tool_adapters.yaml
docs/: AGENTIC.md  CREATE_PR_QUICK_REF.md  DEPRECATIONS.md  INDEX.md  OPERATIONS.md  PR_CREATION_GUIDE.md  PR_CREATION_INSTRUCTIONS.md  README.md  REDIRECTS.md  TESTING.md  backup-strategy.md  configuration.md  directory_detection.md  disaster-recovery.md  event_bus_topics.md  failover_strategy.md  gui_functionality_evaluation.md  health_policies.md  maintenance-schedule.md  planner_costs.md  reproducible-builds.md  security_tokens.md  shell-completion.md  simplified-workflow-guide.md  sla-targets.md  verification_framework.md  vscode_cockpit.md
flags/: registry.yaml
incoming/: File evaluation checklist.docx  File evaluation checklist.txt  _full_dump.txt
lib/: __init__.py  event_bus_client.py  gdw_runner.py  merge_strategy.py
policies/: secrets-policy.yaml  slo-policy.yaml
scripts/: AutoMerge-Workstream.ps1  CLEANUP_README.md  Check-Tooling.ps1  Combined-PowerShell-Scripts.ps1  Create-DesktopShortcut.ps1  PreFlight-Check.ps1  README.md  Rollback.ps1  Safe-AI-Session.ps1  Validate-Policy.ps1  _python_security_tests.py  audit_log_archival.py  auto_create_pr.py  backup_database.ps1  backup_database.sh  backup_utils.py  check_doc_coverage.py  (+60 more)
(+586 files in other folders)
